Authorization and RBAC middleware implementation for Nextjs routes and backend endpoints

--- a/frontend/src/locales/cz/common.json
+++ b/frontend/src/locales/cz/common.json
@@ -113,6 +113,7 @@
     "allProjects": "Všechny Projekty",
     "asSupervisor": "Jako Vedoucí",
     "asOpponent": "Jako Oponent",
+    "createNewProject": "Vytvořit Nový Projekt",
     "sections": {
       "myProjects": "Moje Projekty",
       "supervisor": "Jako Vedoucí",
